@@ -215,6 +215,7 @@ QueueItem* QueueManager::UserQueue::getNext(const UserPtr& aUser, QueueItem::Pri
 					if(blockSize == 0)
 						blockSize = qi->getSize();
 					if(qi->getNextSegment(blockSize).getSize() == 0) {
+						dcdebug("No segment for %s in %s, block " I64_FMT "\n", aUser->getCID().toBase32().c_str(), qi->getTarget().c_str(), blockSize);
 						continue;
 					}
 				}
