@@ -42,7 +42,7 @@ namespace SmartWin
   */
 struct MouseEventResult
 {
-	MouseEventResult(Widget* w, WPARAM wParam, LPARAM lParam);
+	MouseEventResult(HWND hwnd, WPARAM wParam, LPARAM lParam);
 	
 	/// Types of buttons
 	enum Button
@@ -53,7 +53,7 @@ struct MouseEventResult
 	/// Position of mouse
 	/** Position of mouse when event was raised
 	  */
-	ClientCoordinate pos;
+	ScreenCoordinate pos;
 
 	/// is the CTRL key pressed
 	/** true if CTRL key is pressed, otherwise false
@@ -87,14 +87,13 @@ class AspectMouse
 	{
 		typedef std::tr1::function<void (const MouseEventResult &)> F;
 
-		Dispatcher(Widget* w_, const F& f_) : w(w_), f(f_) { }
+		Dispatcher(const F& f_) : f(f_) { }
 
 		bool operator()(const MSG& msg, LRESULT& ret) {
-			f(MouseEventResult(w, msg.wParam, msg.lParam ));
+			f(MouseEventResult(msg.hwnd, msg.wParam, msg.lParam ));
 			return true;
 		}
 
-		Widget* w;
 		F f;
 	};
 
@@ -198,7 +197,7 @@ protected:
 	
 	void onMouse(UINT msg, const typename Dispatcher::F& f) {
 		static_cast<WidgetType*>(this)->setCallback(
-			Message( msg ), Dispatcher(static_cast<WidgetType*>(this), f)
+			Message( msg ), Dispatcher(f)
 		);
 	}
 	virtual ~AspectMouse()
